crates/gldf-rs-ffi/generated/gldf_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_content(void*_Nonnull ptr, RustBuffer geometry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_file_id(void*_Nonnull ptr, RustBuffer geometry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_header(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_image_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_light_sources(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_photometric_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_stats(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_variants(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_gldf_ffi_fn_method_gldfengine_has_archive_data(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_import_from_ifc(void*_Nonnull ptr, RustBuffer ifc_content, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_gldf_ffi_fn_method_gldfengine_is_modified(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_list_archive_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_mark_saved(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_remove_application(void*_Nonnull ptr, uint32_t index, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_remove_file(void*_Nonnull ptr, RustBuffer id, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_applications(void*_Nonnull ptr, RustBuffer applications, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_author(void*_Nonnull ptr, RustBuffer author, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_constant_light_output(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_created_with_application(void*_Nonnull ptr, RustBuffer app, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_creation_time_code(void*_Nonnull ptr, RustBuffer time_code, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_default_language(void*_Nonnull ptr, RustBuffer language, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_electrical_safety_class(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_format_version(void*_Nonnull ptr, RustBuffer version, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_ip_code(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_light_distribution(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_manufacturer(void*_Nonnull ptr, RustBuffer manufacturer, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_power_factor(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_set_switching_capacity(void*_Nonnull ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_json(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_pretty_json(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_xml(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_update_file(void*_Nonnull ptr, RustBuffer id, RustBuffer file_name, RustBuffer content_type, RustBuffer file_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_get_l3d_asset(RustBuffer l3d_file, RustBuffer filename, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_gldf_library_version(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_gldf_ffi_fn_func_gldf_to_json(RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_ifc_import(RustBuffer ifc_content, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_ifc_to_gldf_bytes(RustBuffer ifc_content, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_parse_eulumdat(RustBuffer content, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_parse_eulumdat_bytes(RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_parse_l3d(RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_func_parse_l3d_structure(RustBuffer xml_content, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_gldf_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_gldf_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_gldf_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_gldf_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_gldf_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_gldf_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_gldf_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_gldf_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_gldf_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);