bindings/csharp/src/Generated/gldf_ffi.cs


    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_files(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_content(IntPtr @ptr,RustBuffer @geometryId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_file_id(IntPtr @ptr,RustBuffer @geometryId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_geometry_files(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_header(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_image_files(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_light_sources(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_photometric_files(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_stats(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_variants(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern sbyte uniffi_gldf_ffi_fn_method_gldfengine_has_archive_data(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_import_from_ifc(IntPtr @ptr,RustBuffer @ifcContent,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern sbyte uniffi_gldf_ffi_fn_method_gldfengine_is_modified(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_list_archive_files(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_mark_saved(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_remove_application(IntPtr @ptr,uint @index,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_remove_file(IntPtr @ptr,RustBuffer @id,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_applications(IntPtr @ptr,RustBuffer @applications,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_author(IntPtr @ptr,RustBuffer @author,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_constant_light_output(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_created_with_application(IntPtr @ptr,RustBuffer @app,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_creation_time_code(IntPtr @ptr,RustBuffer @timeCode,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_default_language(IntPtr @ptr,RustBuffer @language,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_electrical_safety_class(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_format_version(IntPtr @ptr,RustBuffer @version,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_ip_code(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_light_distribution(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_manufacturer(IntPtr @ptr,RustBuffer @manufacturer,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_power_factor(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_set_switching_capacity(IntPtr @ptr,RustBuffer @value,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_json(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_pretty_json(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_to_xml(IntPtr @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void uniffi_gldf_ffi_fn_method_gldfengine_update_file(IntPtr @ptr,RustBuffer @id,RustBuffer @fileName,RustBuffer @contentType,RustBuffer @fileType,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_get_l3d_asset(RustBuffer @l3dFile,RustBuffer @filename,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_gldf_library_version(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_gldf_to_json(RustBuffer @data,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_ifc_import(RustBuffer @ifcContent,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_ifc_to_gldf_bytes(RustBuffer @ifcContent,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_parse_eulumdat(RustBuffer @content,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_parse_eulumdat_bytes(RustBuffer @data,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_parse_l3d(RustBuffer @data,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer uniffi_gldf_ffi_fn_func_parse_l3d_structure(RustBuffer @xmlContent,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer ffi_gldf_ffi_rustbuffer_alloc(ulong @size,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer ffi_gldf_ffi_rustbuffer_from_bytes(ForeignBytes @bytes,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rustbuffer_free(RustBuffer @buf,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer ffi_gldf_ffi_rustbuffer_reserve(RustBuffer @buf,ulong @additional,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_u8(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_u8(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_u8(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern byte ffi_gldf_ffi_rust_future_complete_u8(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_i8(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_i8(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_i8(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern sbyte ffi_gldf_ffi_rust_future_complete_i8(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_u16(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_u16(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_u16(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern ushort ffi_gldf_ffi_rust_future_complete_u16(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_i16(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_i16(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_i16(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern short ffi_gldf_ffi_rust_future_complete_i16(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_u32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_u32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_u32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern uint ffi_gldf_ffi_rust_future_complete_u32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_i32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_i32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_i32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern int ffi_gldf_ffi_rust_future_complete_i32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );
